--- a/html/htdoc/menu.html
+++ b/html/htdoc/menu.html
@@ -19,7 +19,7 @@
 </tr>
 <tr>
 	<td><img src = './menu img/kalbi.jpg' width='400' height='400'></td>
-	<td><img src = './menu img/chickin.png' width='400' height='400'></td>
+	<td><a href = 'https://bbq.co.kr'><img src = './menu img/chickin.png' width='400' height='400'></a></td>
 </tr>
 <tr>
 	<td align='center'>양념돼지갈비 12000\ / 200g(뼈포함)</td>
