--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset='UTF-8'>
-<title></title></head>
-<body>
-	<h3>edu19</h3>
-	<a href = './menu.html'>메뉴판</a><br>	
-	<a href = './example.html'>연습파일</a>
+edu 19
 
-</body>
-</html>
+메인 폴더
+
+<a href = './html/index.html'>이동해라<a/>
