--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 	<h3>edu19</h3>
 	<a href = './menu.html'>메뉴판</a><br>	
 	<a href = './example.html'>연습파일</a>
-
+	<a href = './formtest.html'>폼 연습</a>
+	<a href = './question.html'>폼 연습2</a>
 </body>
 </html>
