--- a/html/question.html
+++ b/html/question.html
@@ -1,8 +1,12 @@
-<form>
+<form action ='' method='post' >
+	ID : <input name='userID' align='center' required><br>
+	비밀번호 : <input type='password' name='pwd' required><br>
+	e-mail : <input type = 'email' name = 'user_email' required><br>
+	우편번호 : <input type = 'number' required><br>
+	휴대폰 : <input type = 'tel' name='phone' pattern = [0-9]{3}-[0-9]{4}-[0-9]{4} required><br>
+	<button type='submit'>제출</button><br>
 
-
-
-
+<br><br><br><br>
 <input type = 'text' palceholder='아이디를 입력해 주세요'>아이디
 <br><br>
 <input type = 'checkbox'>성인이면 체크 해주세요
@@ -23,4 +27,4 @@
 
 
 
-<\form>
+</form>
